--- a/MvnApp-master/Jenkinsfile
+++ b/MvnApp-master/Jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
     stages {
         stage('Checkout') {
             steps {
-                git branch: 'master', url: 'https://github.com/vinayGowda173/MvnApp.git'
+                git branch: 'master', url: 'https://github.com/VinayLR54/MvnApp.git'
             }
         }
 
